# MongoMind-AI

./: .env.example  .gitignore  LICENSE  README.md  data.py  key_param.py  main.py  pyproject.toml  server.py
frontend/: index.html  script.js  style.css
