[project]
name = "agentic-ai-project"
version = "0.1.0"
description = "MongoDB RAG AI Agent using LangChain and VoyageAI"
requires-python = ">=3.12,<3.13"

dependencies = [
    "datasets>=4.8.5",
    "langchain==0.3.24",
    "langgraph==0.3.31",
    "langgraph-checkpoint-mongodb==0.1.3",
    "pymongo==4.11.3",
    "voyageai==0.3.2",
    
]
